crates/fv-distribution-filename/src/snapshots/uv_distribution_filename__wheel__tests__ok_single_tags.snap
---
source: crates/fv-distribution-filename/src/wheel.rs
expression: "WheelFilename::from_str(\"foo-1.2.3-py3-none-any.whl\")"
---
Ok(
    WheelFilename {
        name: PackageName(
            "foo",
        ),
        version: "1.2.3",
        tags: Small {
            small: WheelTagSmall {
                python_tag: Python {
                    major: 3,
                    minor: None,
                },
                abi_tag: None,
                platform_tag: Any,
            },
        },
    },
)
